--- a/src/view/assets/css/styles.css
+++ b/src/view/assets/css/styles.css
@@ -1,5 +1,22 @@
 .map {
     width: 500px;
     height: 500px;
-
 } 
+.card-header
+{
+    background: #F56C6C;
+}
+body {
+    background:  #319E94;
+} 
+#btn-buscar {
+    width: 20%;
+    height: auto;
+    background: transparent;
+}
+#name-logo {
+    font-family: 'Pacifico', cursive;
+    font-size:  50px;
+    text-align: center;
+    color: #F9D006;
+}
